--- a/.config/mako/config
+++ b/.config/mako/config
@@ -1,20 +1,19 @@
 # See man 5 mako
 
-anchor=top-left
+anchor=top-right
 width=450
 
-font=monospace 11
+font=monofoki nerd font 14
 
-background-color=#798BC7
-text-color=#000000
-progress-color=over #5588AA
+background-color=#000000aF
+text-color=#FFFFFF
 
-# border-color=#657ABF
-border-size=0
+border-color=#FFFFFF
+border-size=4
 border-radius=5
 
 margin=10
-padding=10,16
+padding=14,16
 
 icons=1
 max-icon-size=64
