--- a/.config/swaync/config.json
+++ b/.config/swaync/config.json
@@ -1,94 +1,57 @@
 {
   "$schema": "/etc/xdg/swaync/configSchema.json",
-  "ignore-gtk-theme": true,
-  "positionX": "right",
-  "positionY": "top",
-  "layer": "overlay",
-  "control-center-layer": "top",
-  "layer-shell": true,
-  "layer-shell-cover-screen": true,
-  "cssPriority": "highest",
-  "control-center-margin-top": 0,
-  "control-center-margin-bottom": 0,
-  "control-center-margin-right": 0,
-  "control-center-margin-left": 0,
-  "notification-2fa-action": true,
-  "notification-inline-replies": false,
-  "notification-body-image-height": 100,
-  "notification-body-image-width": 200,
-  "timeout": 10,
-  "timeout-low": 5,
-  "timeout-critical": 0,
-  "fit-to-screen": true,
-  "relative-timestamps": true,
-  "control-center-width": 500,
-  "control-center-height": 600,
-  "notification-window-width": 500,
-  "keyboard-shortcuts": true,
-  "notification-grouping": true,
-  "image-visibility": "when-available",
-  "transition-time": 200,
-  "hide-on-clear": false,
-  "hide-on-action": true,
-  "text-empty": "No Notifications",
-  "script-fail-notify": true,
-  "scripts": {
-    "example-script": {
-      "exec": "echo 'Do something...'",
-      "urgency": "Normal"
-    },
-    "example-action-script": {
-      "exec": "echo 'Do something actionable!'",
-      "urgency": "Normal",
-      "run-on": "action"
-    }
-  },
-  "notification-visibility": {
-    "example-name": {
-      "state": "muted",
-      "urgency": "Low",
-      "app-name": "Spotify"
-    }
-  },
+
+  "text-empty": "all alone...",
+
   "widgets": [
+    "buttons-grid",
     "inhibitors",
-    "title",
-    "dnd",
-    "notifications"
+    "notifications",
+    "mpris"
   ],
+
   "widget-config": {
     "inhibitors": {
       "text": "Inhibitors",
       "button-text": "Clear All",
-      "clear-all-button": true
+      "clear-all-button": false
     },
+
     "title": {
-      "text": "Notifications",
+      "text": "",
       "clear-all-button": true,
       "button-text": "Clear All"
     },
+
     "dnd": {
-      "text": "Do Not Disturb"
+      "text": "🛇"
     },
+
     "label": {
       "max-lines": 5,
       "text": "Label Text"
     },
+
     "mpris": {
-      "blacklist": [],
       "autohide": false,
-      "show-album-art": "always",
-      "loop-carousel": false
+      "show-album-art": "when-available",
+      "loop-carousel": true
     },
+
     "buttons-grid": {
-      "buttons-per-row": 7,
+      "buttons-per-row": 2,
       "actions": [
         {
-          "label": "直",
+          "label": "DND  ",
           "type": "toggle",
           "active": true,
-          "command": "sh -c '[[ $SWAYNC_TOGGLE_STATE == true ]] && nmcli radio wifi on || nmcli radio wifi off'",
-          "update-command": "sh -c '[[ $(nmcli radio wifi) == \"enabled\" ]] && echo true || echo false'"
+          "command": "swaync-client --toggle-dnd",
+          "update-command": "swaync-client --get-dnd"
+        },
+        {
+          "label": "CLEAR ALL",
+          "type": "normal",
+          "command": "swaync-client --close-all"
         }
       ]
     }
