--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -55,7 +55,7 @@ active_tab_font_style  Bold
 #####################
 window_alert_on_bell  yes
 bell_on_tab           " "
-command_on_bell       notify-send '🔔 Terminal bell' 'Check your terminal!' --icon=utilities-terminal
+command_on_bell       notify-send '🔔 Terminal bell' 'Check your terminal!' --icon=kitty -h int:transient:1
 enable_audio_bell     no
 
 
