--- a/.var/app/io.mpv.Mpv/config/mpv/input.conf
+++ b/.var/app/io.mpv.Mpv/config/mpv/input.conf
@@ -6,5 +6,15 @@ UP seek 0
 DOWN seek 0
 
 # anime4k
-CTRL+1 no-osd change-list glsl-shaders set "~~/shaders/SSimSuperRes.glsl"; show-text "SSimSuperRes.glsl loaded"
-CTRL+0 no-osd change-list glsl-shaders clr ""; show-text "GLSL shaders cleared"
+# CTRL+1 no-osd change-list glsl-shaders set "~~/shaders/SSimSuperRes.glsl"; show-text "SSimSuperRes.glsl loaded"
+# CTRL+0 no-osd change-list glsl-shaders clr ""; show-text "GLSL shaders cleared"
+
+# mpv websocket
+SPACE      cycle pause;     script-message togglewebsocket
+MBTN_RIGHT cycle pause;     script-message togglewebsocket
+p          cycle pause;     script-message togglewebsocket
+PLAY       cycle pause;     script-message togglewebsocket
+PAUSE      cycle pause;     script-message togglewebsocket
+PLAYPAUSE  cycle pause;     script-message togglewebsocket
+PLAYONLY   set   pause no;  script-message togglewebsocket
+PAUSEONLY  set   pause yes; script-message togglewebsocket
