--- a/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
+++ b/.var/app/io.mpv.Mpv/config/mpv/mpv.conf
@@ -1,41 +1,47 @@
-### Video
+### audio and video
+## Video
 profile=gpu-hq
 dither-depth=auto
 hwdec=auto-copy
 vo=gpu
 vid=auto
 
-### cache
-demuxer-seekable-cache=yes
-demuxer-readahead-secs=120
-demuxer-max-bytes=3GiB
+## Audio
+ao=pulse
+alang='jpn,jp,eng,en'
 
-### screenshots
+## screenshots
 screenshot-format=webp
 screenshot-png-compression=0
 screenshot-dir='~/Pictures/mpv/'
 
-### Audio
-ao=pulse
-alang='jpn,jp,eng,en'
 
 ### Interface
-# Subtitles
+## Subtitles
 slang='eng,en,enUS'
 sub-auto=fuzzy
 
-# OSD
+## OSD
 osd-font='Google Sans'
+
+
+### misc
+## ytdl
+ytdl-format=bestvideo[height<=?1080]+bestaudio/best # Set max streaming quality as 1080p.
+force-seekable=yes
+
+## mpv websocket
+input-ipc-server=/tmp/mpv-socket
+
 
 ### Playback
 save-position-on-quit
 ignore-path-in-watch-later-config
 
-### ytdl
-ytdl-format=bestvideo[height<=?1080]+bestaudio/best # Set max streaming quality as 1080p.
-force-seekable=yes
-
-### cache
+## cache
+demuxer-seekable-cache=yes
+demuxer-readahead-secs=120
+demuxer-max-bytes=3GiB
 [cache]
 profile-cond=demuxer_via_network
 demuxer-seekable-cache=no
