--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -74,7 +74,9 @@ map ctrl+shift+kp_end scroll_end
 map ctrl+shift+l
 
 # don't really need this with fish shell actually
-map ctrl+v paste_from_clipboard
+# in fact, it conflicts with some nvim binds
+# only needed if you can't configure bash/readline to use ctrl+v as paste
+# map ctrl+v paste_from_clipboard
 
 ########
 # Misc #
