--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -42,7 +42,7 @@ window_padding_width      1
 window_border_width       0pt
 
 # Tab bar
-tab_bar_edge           bottom
+tab_bar_edge           top
 tab_bar_min_tabs       1
 tab_bar_style          fade
 tab_bar_align          center
