--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -21,8 +21,10 @@ font_size        13.0
 #modify_font     cell_height 6px
 
 # reduce input latency
-sync_to_monitor  no
-input_delay      0
+input_delay 0
+repaint_delay 2
+sync_to_monitor no
+wayland_enable_ime no
 
 # cursor
 cursor_shape                  beam
